# traffic

./: .gitignore  CMakeLists.txt
traffic/: main.cpp
traffic2/: traffic_light.cpp  traffic_light.h
